--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header>
     <!-- Your centered GIF header -->
-    <img src="your-header.gif" alt="Header GIF">
+    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2M0Z2NvNjlkaXB5M3ZubXl6bjJzMTk1ZTZ0emRkbDM4b24zZ3RnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF">
   </header>
 
   <div class="video-list">
