--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 0.25in; /* quarter-inch between full-screen blocks */
+      gap: 0.25in; /* quarter-inch between blocks */
       scroll-snap-type: y mandatory;
     }
 
     .video-container {
-      width: 100vw;
-      height: 100vh;
+      width: 75vw;
+      height: 75vh;
       position: relative;
-      background: #111; /* slightly lighter so the video edges stand out */
+      background: #111;
       overflow: hidden;
       scroll-snap-align: start;
     }
@@ -52,7 +52,6 @@
 <body>
 
   <header>
-    <!-- Your centered GIF header -->
     <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2M0Z2NvNjlkaXB5M3ZubXl6bjJzMTk1ZTZ0emRkbDM4b24zZ3RnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF">
   </header>
 
